[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfgflow"
version = "0.1.0"
description = "CFG-Aware Traffic Flow Forecasting Using SUMO (LUST) with live congestion analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "nicegui>=2.6.2",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "fastapi>=0.110",
  "pywebview>=4.4",
]

[project.optional-dependencies]
ml = [
  "numpy>=1.26",
  "torch>=2.2",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
]

[project.scripts]
cfgflow = "cfgflow.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
